# Mojang-server-GUI

./: .gitmodules  CMakeLists.txt
src/: main.c
